<resources>
    <string name="app_name">UMusic</string>

    <!-- Menu -->
    <string name="action_search">Search</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_library">Library</string>

    <!-- fragment_artists.xml -->
    <string name="search_hint">Search Artist</string>
    <string name="search_music_hint">Find your favorite music</string>
    <string name="search_artist_hint">Search artists.</string>

    <string name="img_default">http://d2c87l0yth4zbw-2.global.ssl.fastly.net/i/_global/open-graph-default.png</string>

    <!-- activartistacks.xml  -->

    <string name="detail_top_tracks">Top 10 Tracks</string>
    <string name="detail_title">Artist</string>
    <string name="detail_subtitle">followers</string>
    <string name="detail_hint_followers">%d Followers</string>
    <string name="detail_hint_popularity">Popularity</string>
    <string name="detail_hint_artist">Artist</string>
    <string name="track_name_item">Track Name</string>
    <string name="track_album_item">Album Track</string>

    <plurals name="numberOfFollowers">
        <item quantity="other">%d Followers</item>
    </plurals>

    <!-- homeactivity.xml-->

    <string name="new_release">New Releases</string>
    <string name="genres">Genres</string>

    <!-- exceptions -->
    <string name="error_artist_not_found">Artist not found, please check that a correct name is entered</string>
    <string name="error_tracks_not_found">Tracks not found, please check that a correct name is entered</string>
    <string name="error_internet_connection">Please check your Internet connection!</string>
    <string name="error_server_internal">Oops,Something is wrong with the server.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- track_options-->
    <string name="play_next">Play Next</string>
    <string name="save">Save</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="view_album">View Album</string>
    <string name="view_artist">View Artist</string>

</resources>
