<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:layout_marginTop="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_artist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

      <android.support.design.widget.CollapsingToolbarLayout
          android:id="@+id/collapsing_artist"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:contentScrim="?attr/colorPrimary"
          app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_collapseMode="parallax">

          <ImageView
              android:id="@+id/iv_collapsing_artist"
              style="@style/Theme.AppTheme.Music.ImageView.Collapsing"
              app:layout_collapseMode="parallax"
              tools:ignore="ContentDescription" />

          <de.hdodenhof.circleimageview.CircleImageView
              android:id="@+id/civ_artist"
              style="@style/Theme.AppTheme.Music.CircularImageView"
              app:border_color="@android:color/white"
              app:border_width="2dp" />

          <TextView
              android:id="@+id/txt_title_artist"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="85dp"
              android:gravity="center"
              android:text="@string/detail_title"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
              android:textColor="@color/white" />


          <TextView
              android:id="@+id/txt_followers_artist"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="110dp"
              android:gravity="center"
              android:text="@string/detail_hint_followers"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
              android:textColor="@color/white" />

        </FrameLayout>


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            app:layout_anchor="@id/appbar_artist"
            app:layout_anchorGravity="bottom"
            app:layout_collapseMode="pin"
            app:theme="@style/ThemeOverlay.AppCompat.Dark">


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:minHeight="?android:attr/actionBarSize"
              android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title_tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_top_tracks"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_subtitle_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textColor="@color/white"
                android:visibility="visible" />


          </LinearLayout>
        </android.support.v7.widget.Toolbar>


      </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="566dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_tracks"
          style="@style/Theme.AppTheme.Music.RecyclerView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_behavior="@string/appbar_scrolling_view_behavior" />

      <ProgressBar
          android:id="@+id/pv_tracks"
          style="@style/Theme.AppTheme.Music.ProgressBar"
          android:layout_marginTop="@dimen/space_default" />

      <ImageView
          android:id="@+id/iv_tracks"
          style="@style/Theme.AppTheme.Music.ImageView" />

      <TextView
          android:id="@+id/txt_line_tracks"
          style="@style/Theme.AppTheme.Music.TextView"
          android:text="@string/search_music_hint"
          android:textSize="@dimen/size_title" />
    </LinearLayout>

  </android.support.design.widget.CoordinatorLayout>

  <android.support.design.widget.BottomNavigationView
      android:id="@+id/bottom_navigation"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_alignParentBottom="true"
      android:layout_gravity="bottom"
      app:itemBackground="@color/colorPrimary"
      app:itemIconTint="@color/white"
      app:itemTextColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:menu="@menu/bottom_navigation" />
</android.support.constraint.ConstraintLayout>